# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener


## [2.12.0]
### Added
- [API_PARSER] [VECTRA] New parser Vectra
- [MANAGE] [COMMANDS] New command get_api_key
- [OPENID] [CONNECTOR] New JWT validation parameters
- [OAUTH2] [USERINFO] Allow to validate JWT in /userinfo with new OpenID connector's parameters
### Changed
- [API_PARSER] [MS_SENTINEL] timeGenerated -> processingEndTime and incident.id -> incident.name
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.5 -> 3.8.6
  - boto3 1.28.52 -> 1.28.68
  - botocore 1.31.52 -> 1.31.68
  - cffi 1.15.1 -> 1.16.0
  - charset-normalizer 3.2.0 -> 3.3.1
  - django 3.2.22 -> 4.2.6
  - djongo pypi -> VultureProject
  - google-api-core 2.11.1 -> 2.12.0
  - google-api-python-client 2.100.0 -> 2.104.0
  - google-auth 2.23.0 -> 2.23.3
  - googleapis-common-protos 1.60.0 -> 1.61.0
  - meraki 1.37.2 -> 1.38.0
  - packaging 23.1 -> 23.2
  - pillow 10.0.1 -> 10.1.0
  - protobuf 4.24.3 -> 4.24.4
  - pytz deleted
  - s3transfer 0.6.2 -> 0.7.0
  - sqlparse 0.2.4 -> 0.4.4
  - urllib3 1.26.17 -> 1.26.18
  - werkzeug 2.3.7 -> 3.0.0
- [API] [PF] Changed old PF whitelist/blacklist from config to new API entrypoint 'api/v1/system/pf/'
- [INTERNAL] Adapt model relationships to Django 4.2
### Fixed
- [PORTAL] [IDP] Refresh token validation with multiple IDP
- [FRONTEND] Disable log condition if log forwarder disabled
- [REPUTATION_CTX] Invalid headers templating
- [PORTAL] [SSO] Avoid autologon password retrieval failures
- [API_PARSER] [TRENDMICRO_VISIONONE] Fix Alerts endpoint params
- [API] [CLUSTER_CONFIG] Add missing allowed fields for API PATCHing
- [SETTINGS] Update CSRF_TRUSTED_ORIGINS format for Django 4