@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Added
+- [FRONTEND] New last_update_time field
 ### Fixed
 - [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
 
